<resources>
    <string name="app_name">Esport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_tour">Tournament</string>
    <string name="menu_support">Support</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_other">Other</string>

    <string name="menu_manage">Manage</string>
    <string name="menu_post">Posts</string>
    <string name="menu_cata">Catalog</string>
    <string name="menu_user">Users</string>
    <string name="menu_cmt">Comments</string>
    <string name="acc_email">guest@gmail.com</string>
    <string name="acc_name">Guest</string>
    <string name="inputBlank">This field cannot be blank</string>

    <string name="err_msg_email">Please input valid email</string>
    <string name="err_msg_password">Please input valid password</string>
    <string name="err_string_email">Enter a valid email</string>
    <string name="err_string_password">Enter a valid password with 6 characters</string>
    <string name="err_msg_required">Required</string>
    <string name="title_activity_add_post">AddPostActivity</string>

    <string name="catalog_prompt">Choose a catalog</string>

    <string-array name="catalog_arrays">
        <item>News</item>
        <item>Champions</item>
        <item>Items</item>
        <item>Runes</item>
    </string-array>

    <string name="role_prompt">Choose a catalog</string>

    <string-array name="role_arrays">
        <item>Admin</item>
        <item>Employee</item>
        <item>User</item>
    </string-array>
    <string name="title_activity_manage_comment">ManageCommentActivity</string> 
</resources>
